--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,8 @@ body {
 .letter-spacing {
   letter-spacing: 0.5rem;
 }
+
+.header-hero{
+  background:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(./images/homeBcg.jpeg) center/cover no-repeat;
+  min-height: calc(100vh - 56px);
+}
