--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,11 @@ body {
   letter-spacing: 0.5rem;
 }
 
-.header-hero{
+.header-hero, .default-hero{
   background:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(./images/homeBcg.jpeg) center/cover no-repeat;
   min-height: calc(100vh - 56px);
+}
+
+.default-hero{
+  background:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(./images/defaultBcg.jpeg) center/cover no-repeat;
 }
